<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>tf_broadcaster</name>
  <version>1.0.0</version>
  <description>The tf_broadcaster package used for the localization section</description>

  <maintainer email="guido.kueppers@ika.rwth-aachen.de">Guido Küppers</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <depend>geographiclib</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
