<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_segmentation_r2</name>
  <version>0.1.0</version>
  <description>This package performs semantic image segmentation on camera images.</description>

  <maintainer email="till.beemelmanns@rwth-aachen.de">Till Beemelmanns</maintainer>

  <license>MIT</license>

  <exec_depend>python-tensorflow-pip</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
