<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_segmentation_r2</name>
  <version>0.1.0</version>
  <description>This package performs semantic point cloud segmentation.</description>

  <maintainer email="till.beemelmanns@rwth-aachen.de">Till Beemelmanns</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- catkin package dependencies -->
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Python dependencies -->
  <depend>python-tensorflow-gpu-pip</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
