<?xml version="1.0"?>
<package format="2">
  <name>racing</name>
  <version>0.1.0</version>
  <description>Controller for the racing vehicle</description>

  <maintainer email="simon.schaefer@ika.rwth-aachen.de">Simon Schaefer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
