<?xml version="1.0"?>
<package format="2">
  <name>racing</name>
  <version>0.1.0</version>
  <description>Controller for the racing vehicle</description>

  <maintainer email="christian.geller@ika.rwth-aachen.de">Christian Geller</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
