<?xml version="1.0"?>
<package format="2">
  <name>camera_based_semantic_grid_mapping</name>
  <version>0.1.0</version>
  <description>This package performs semantic grid mapping using inverse perspective mapping on segmented camera images.</description>

  <maintainer email="mohamed.kastouri@rwth-aachen.de">Mohamed Kastouri</maintainer>

  <author email="mohamed.kastouri@rwth-aachen.de">Mohamed Kastouri</author>


  <license>MIT</license>
  

  <buildtool_depend>catkin</buildtool_depend>
 
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
